--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://ngoytom:<password>@cluster0.0ahcn.mongodb.net/financetracker?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ngoytom:sBcJMcVV4BjyseNr@cluster0.0ahcn.mongodb.net/financetracker?retryWrites=true&w=majority
